Style and UI Fixes:
- Even out whitespace on the landing page
- Even out spacing relative to footer shared element
- Change 'fa-times' Journal Delete button to 'fa-trash-o'
- Bug Fix: Override 'destroy' method on Img class to use correct
           urlRoot

--- a/static/j_app/landing_page/less/base.less
+++ b/static/j_app/landing_page/less/base.less
@@ -32,7 +32,7 @@
 	overflow: hidden;
 	img {
 		width: 100%;
-		max-height: 100%;
+		height: 100%;
 		margin: 0 auto;
 	}
 }
