--- a/static/j_app/shared/less/base.less
+++ b/static/j_app/shared/less/base.less
@@ -33,7 +33,7 @@ html {
       position: relative;
       font-family: 'Titillium Web', sans-serif;
       margin: 0;
-      padding: 0;
+      padding: 0 0 20px 0;
       background-color: #fafafa;
       .header {
         background-color: #fff;
@@ -102,7 +102,8 @@ html {
         width: 100%;
         position: absolute;
         bottom: 0;
-        border-top: 1px solid #ccc;
+        border-top: 1px solid #bbb;
+        padding-top: 10px;
         .footer {
           width: 100%;
           text-align: center;
